# modestly-modular-modpack-modifier

./: .gitignore  .rustfmt.toml  Cargo.toml  design.adoc  flake.nix  readme.adoc
crates/api_client/: Cargo.toml
crates/api_client/src/: common.rs  curse.rs  lib.rs  modrinth.rs
crates/mmmm_core/: Cargo.toml
crates/mmmm_core/src/: lib.rs
crates/mmmm_core/src/di/: container.rs  logger.rs  mod.rs  orch.rs
crates/mmmm_core/src/file/: filepath.rs  filestore.rs  filetree.rs  mod.rs
crates/mmmm_core/src/node/: archive_downloader.rs  config.rs  curse_resolver.rs  dir_merge.rs  file_filter.rs  file_picker.rs  mod.rs  mod_filter.rs  mod_merge.rs  mod_overrider.rs  mod_resolver.rs  mod_writer.rs  source.rs  utils.rs
crates/modestly-modular-modpack-modifier-cli/: Cargo.toml
crates/modestly-modular-modpack-modifier-cli/src/: cache.rs  main.rs
examples/: download_and_unpack.yaml  meatballcraft.yaml
src/: main.rs  options.rs
src/api/: common.rs  curse.rs  mod.rs  modrinth.rs
src/di/: container.rs  logger.rs  mod.rs
src/file/: filepath.rs  filestore.rs  filetree.rs  mod.rs
src/filetree/: filepath.rs  filestore.rs  filetree.rs  mod.rs
src/node/: archive_downloader.rs  config.rs  dir_merge.rs  file_filter.rs  mod.rs  utils.rs
src/operators/: mod.rs  model.rs  operators.rs
