[package]
name = "modestly-modular-modpack-modifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 1.0.171 is the latest version without binary blobs
serde = { version = "<=1.0.171", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.6"
anyhow = "1.0"
zip = "0.6"
tar = "0.4"
tempdir = "0.3"
walkdir = "2.3"
dircpy = "0.3"
structopt = "0.3"
parking_lot = "0.12"
thiserror = "1.0.46"
enum_dispatch = "0.3.12"
glob-match = "0.2.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.tokio]
version = "1.31"
features = ["sync", "test-util"]
