[package]
name = "api_client"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratelimit = "0.7.0"
ureq = { version = "2.7", features = ["json"] }
const_format = "0.2.31"
serde = { version = ">=1.0.185", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0.46"

[features]
# Enable tests that depend on a valid Curse API key
curse-test = []
