[package]
name = "api_client"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratelimit = "0.7.0"
ureq = { version = "2.7", features = ["json"] }
const_format = "0.2.31"
serde = { version = ">=1.0.185", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_repr = "0.1.16"
thiserror = "1.0.46"
lazy_static = "1.4.0"

[dev-dependencies]
toml = "0.8.1"

[features]
# Enable tests that depend on a valid Curse API key
curse-test = []
