[package]
name = "modestly-modular-modpack-modifier-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
toml = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-indicatif = "0.3.5"
indicatif = "0.17.7"
mmmm_core = { path = "../mmmm_core" }
