[package]
name = "modestly-modular-modpack-modifier-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
toml = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-error = "0.2.0"
tracing-indicatif = "0.3.5"
indicatif = "0.17.7"
tokio = { version = "1.31", default-features = false, features = ["sync"] }
directories = "5.0.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22.0"
r2d2 = "0.8.10"
mmmm_core = { path = "../mmmm_core" }
